@@ -41,58 +41,58 @@ public class IndexedMap<K, V> extends AbstractMap<K, V> implements Paired<K, V> 
 
         private final EntrySet.KeyedPrimitives<K> myEntries;
 
-        MappedPrimitives(final EntrySet.KeyedPrimitives<K> entries) {
+        MappedPrimitives( EntrySet.KeyedPrimitives<K> entries) {
             super(entries);
             myEntries = entries;
         }
 
-        public byte byteValue(final long index) {
+        @Override public byte byteValue( long index) {
             return myEntries.byteValue(index);
         }
 
-        public long count() {
+        @Override public long count() {
             return myEntries.count();
         }
 
-        public double doubleValue(final long index) {
+        @Override public double doubleValue( long index) {
             return myEntries.doubleValue(index);
         }
 
-        public float floatValue(final long index) {
+        @Override public float floatValue( long index) {
             return myEntries.floatValue(index);
         }
 
-        public PrimitiveNumber get(final long index) {
+        @Override public PrimitiveNumber get( long index) {
             return myEntries.get(index);
         }
 
-        public int intValue(final long index) {
+        @Override public int intValue( long index) {
             return myEntries.intValue(index);
         }
 
-        public long longValue(final long index) {
+        @Override public long longValue( long index) {
             return myEntries.longValue(index);
         }
 
-        public void set(final long index, final Comparable<?> value) {
+        @Override public void set( long index,  Comparable<?> value) {
             myEntries.set(index, value);
         }
 
-        public void set(final long index, final double value) {
+        @Override public void set( long index,  double value) {
             myEntries.set(index, value);
         }
 
-        public void set(final long index, final float value) {
+        @Override public void set( long index,  float value) {
             myEntries.set(index, value);
         }
 
-        public short shortValue(final long index) {
+        @Override public short shortValue( long index) {
             return myEntries.shortValue(index);
         }
 
     }
 
-    public static <K extends Enum<K>> IndexedMap.MappedPrimitives<K> of(final Class<K> keyType, final byte defaultValue) {
+    public static <K extends Enum<K>> IndexedMap.MappedPrimitives<K> of( Class<K> keyType,  byte defaultValue) {
 
         K[] keys = keyType.getEnumConstants();
         byte[] values = new byte[keys.length];
@@ -104,16 +104,16 @@ public class IndexedMap<K, V> extends AbstractMap<K, V> implements Paired<K, V> 
         return new IndexedMap.MappedPrimitives<>(new EntrySet.ObjectByte<>(keys, values));
     }
 
-    public static <K extends Enum<K>, V> IndexedMap<K, V> of(final Class<K> keyType, final Class<V> valueType) {
+    public static <K extends Enum<K>, V> IndexedMap<K, V> of( Class<K> keyType,  Class<V> valueType) {
 
         K[] keys = keyType.getEnumConstants();
         @SuppressWarnings("unchecked")
-        V[] values = (V[]) Array.newInstance(valueType, keys.length);
+        var values = (V[]) Array.newInstance(valueType, keys.length);
 
         for (int i = 0; i < values.length; i++) {
             try {
-                values[i] = valueType.newInstance();
-            } catch (InstantiationException | IllegalAccessException exception) {
+                values[i] = valueType.getDeclaredConstructor().newInstance();
+            } catch (ReflectiveOperationException exception) {
                 values[i] = null;
             }
         }
@@ -121,7 +121,7 @@ public class IndexedMap<K, V> extends AbstractMap<K, V> implements Paired<K, V> 
         return new IndexedMap<>(new EntrySet.ObjectObject<>(keys, values));
     }
 
-    public static <K extends Enum<K>> IndexedMap.MappedPrimitives<K> of(final Class<K> keyType, final double defaultValue) {
+    public static <K extends Enum<K>> IndexedMap.MappedPrimitives<K> of( Class<K> keyType,  double defaultValue) {
 
         K[] keys = keyType.getEnumConstants();
         double[] values = new double[keys.length];
@@ -133,7 +133,7 @@ public class IndexedMap<K, V> extends AbstractMap<K, V> implements Paired<K, V> 
         return new IndexedMap.MappedPrimitives<>(new EntrySet.ObjectDouble<>(keys, values));
     }
 
-    public static <K extends Enum<K>> IndexedMap.MappedPrimitives<K> of(final Class<K> keyType, final float defaultValue) {
+    public static <K extends Enum<K>> IndexedMap.MappedPrimitives<K> of( Class<K> keyType,  float defaultValue) {
 
         K[] keys = keyType.getEnumConstants();
         float[] values = new float[keys.length];
@@ -145,7 +145,7 @@ public class IndexedMap<K, V> extends AbstractMap<K, V> implements Paired<K, V> 
         return new IndexedMap.MappedPrimitives<>(new EntrySet.ObjectFloat<>(keys, values));
     }
 
-    public static <K extends Enum<K>> IndexedMap.MappedPrimitives<K> of(final Class<K> keyType, final int defaultValue) {
+    public static <K extends Enum<K>> IndexedMap.MappedPrimitives<K> of( Class<K> keyType,  int defaultValue) {
 
         K[] keys = keyType.getEnumConstants();
         int[] values = new int[keys.length];
@@ -157,7 +157,7 @@ public class IndexedMap<K, V> extends AbstractMap<K, V> implements Paired<K, V> 
         return new IndexedMap.MappedPrimitives<>(new EntrySet.ObjectInt<>(keys, values));
     }
 
-    public static <K extends Enum<K>> IndexedMap.MappedPrimitives<K> of(final Class<K> keyType, final long defaultValue) {
+    public static <K extends Enum<K>> IndexedMap.MappedPrimitives<K> of( Class<K> keyType,  long defaultValue) {
 
         K[] keys = keyType.getEnumConstants();
         long[] values = new long[keys.length];
@@ -169,7 +169,7 @@ public class IndexedMap<K, V> extends AbstractMap<K, V> implements Paired<K, V> 
         return new IndexedMap.MappedPrimitives<>(new EntrySet.ObjectLong<>(keys, values));
     }
 
-    public static <K extends Enum<K>> IndexedMap.MappedPrimitives<K> of(final Class<K> keyType, final short defaultValue) {
+    public static <K extends Enum<K>> IndexedMap.MappedPrimitives<K> of( Class<K> keyType,  short defaultValue) {
 
         K[] keys = keyType.getEnumConstants();
         short[] values = new short[keys.length];
@@ -181,11 +181,11 @@ public class IndexedMap<K, V> extends AbstractMap<K, V> implements Paired<K, V> 
         return new IndexedMap.MappedPrimitives<>(new EntrySet.ObjectShort<>(keys, values));
     }
 
-    public static <K extends Enum<K>, V> IndexedMap<K, V> of(final Class<K> keyType, final V defaultValue) {
+    public static <K extends Enum<K>, V> IndexedMap<K, V> of( Class<K> keyType,  V defaultValue) {
 
         K[] keys = keyType.getEnumConstants();
         @SuppressWarnings("unchecked")
-        V[] values = (V[]) Array.newInstance(defaultValue.getClass(), keys.length);
+        var values = (V[]) Array.newInstance(defaultValue.getClass(), keys.length);
 
         for (int i = 0; i < values.length; i++) {
             values[i] = defaultValue;
@@ -196,7 +196,7 @@ public class IndexedMap<K, V> extends AbstractMap<K, V> implements Paired<K, V> 
 
     private final EntrySet<K, V> myEntrySet;
 
-    IndexedMap(final EntrySet<K, V> entries) {
+    IndexedMap( EntrySet<K, V> entries) {
         super();
         myEntrySet = entries;
     }
@@ -206,15 +206,15 @@ public class IndexedMap<K, V> extends AbstractMap<K, V> implements Paired<K, V> 
         return myEntrySet;
     }
 
-    public K getKey(final int index) {
+    @Override public K getKey( int index) {
         return myEntrySet.getKey(index);
     }
 
-    public EntryPair<K, V> getPair(final int index) {
+    @Override public EntryPair<K, V> getPair( int index) {
         return myEntrySet.getPair(index);
     }
 
-    public V getValue(final int index) {
+    @Override public V getValue( int index) {
         return myEntrySet.getValue(index);
     }
 
